--- a/index.html
+++ b/index.html
@@ -1,60 +1,59 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Syntax vs Semantics by ajnsit</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <title>Anupam's Hovercraft full of memes</title>
+    <style>
+      #imagelist {
+        width:100%;
+        overflow:scroll;
+      }
+      #imagelist > img {
+        width: 300px;
+        border: 5px solid #eeeeee;
+      }
+    </style>
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Syntax vs Semantics</h1>
-        <p>Anupam Jain&#39;s blog</p>
-        <p class="view"><a href="https://github.com/ajnsit">View the Project on GitHub <small>ajnsit</small></a></p>
-        <ul>
-          <li class="single"><a href="https://github.com/ajnsit/ajnsit.github.io">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you're using GitHub for Mac or GitHub for Windows, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
+    <h1>Anupam's Hovercraft full of memes</h1>
+    <p><a rel="me" href="https://functional.cafe/@haskman">I'm on Mastodon!</a></p>
+    <div id="imagelist">
+      <img src="memes/cant-believe-you-havent-switched.jpg">
+      <img src="memes/flamin-millennials.jpg">
+      <img src="memes/how-do-i-traverse.jpg">
+      <img src="memes/no-analogy-only-types.jpg">
+      <img src="memes/show-me-types.jpg">
+      <img src="memes/victor-go-doesnt-need-generics.jpg">
+      <img src="memes/you-are-all-wrong.jpg">
+      <img src="memes/a-polished-ball-of-dirt.jpg">
+      <img src="memes/css-kills.jpg">
+      <img src="memes/functions-and-data.jpg">
+      <img src="memes/induction.jpg">
+      <img src="memes/ocaml.jpg">
+      <img src="memes/society-if-haskell-had-an-ide.jpg">
+      <img src="memes/well-yes-but-actually-no.jpg">
+      <img src="memes/you-come-to-me-at-runtime.jpg">
+      <img src="memes/applied-fireman.jpg">
+      <img src="memes/dead-end.jpg">
+      <img src="memes/functions-break-up.jpg">
+      <img src="memes/its-a-struggle.jpg">
+      <img src="memes/parser-for-things.jpg">
+      <img src="memes/spongebob-uses-applicative.jpg">
+      <img src="memes/who-needs-types-jigsaw.jpg">
+      <img src="memes/audience-question.jpg">
+      <img src="memes/dot-syntax.jpg">
+      <img src="memes/give-me-errors-to-fix.jpg">
+      <img src="memes/kindle-haskell.jpg">
+      <img src="memes/quick-check.jpg">
+      <img src="memes/too-late-clojure.jpg">
+      <img src="memes/write-garbage.jpg">
+      <img src="memes/avoid-state.jpg">
+      <img src="memes/excel-is-fp.jpg">
+      <img src="memes/halting-captcha.jpg">
+      <img src="memes/morphin-time.jpg">
+      <img src="memes/run-away-category-theory.jpg">
+      <img src="memes/turbo-haskell.jpg">
+      <img src="memes/x-prime-prime.jpg">
+      <img src="memes/7-steps-for-elegant-haskell.jpg">
     </div>
-    <footer>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
   </body>
 </html>
