Add traverse memes

--- a/index.html
+++ b/index.html
@@ -17,43 +17,46 @@
     <h1>Anupam's Hovercraft full of memes</h1>
     <p><a rel="me" href="https://functional.cafe/@haskman">I'm on Mastodon!</a></p>
     <div id="imagelist">
-      <img src="memes/cant-believe-you-havent-switched.jpg">
-      <img src="memes/flamin-millennials.jpg">
-      <img src="memes/how-do-i-traverse.jpg">
-      <img src="memes/no-analogy-only-types.jpg">
-      <img src="memes/show-me-types.jpg">
-      <img src="memes/victor-go-doesnt-need-generics.jpg">
-      <img src="memes/you-are-all-wrong.jpg">
-      <img src="memes/a-polished-ball-of-dirt.jpg">
-      <img src="memes/css-kills.jpg">
-      <img src="memes/functions-and-data.jpg">
-      <img src="memes/induction.jpg">
-      <img src="memes/ocaml.jpg">
-      <img src="memes/society-if-haskell-had-an-ide.jpg">
-      <img src="memes/well-yes-but-actually-no.jpg">
-      <img src="memes/you-come-to-me-at-runtime.jpg">
-      <img src="memes/applied-fireman.jpg">
-      <img src="memes/dead-end.jpg">
-      <img src="memes/functions-break-up.jpg">
-      <img src="memes/its-a-struggle.jpg">
-      <img src="memes/parser-for-things.jpg">
-      <img src="memes/spongebob-uses-applicative.jpg">
-      <img src="memes/who-needs-types-jigsaw.jpg">
-      <img src="memes/audience-question.jpg">
-      <img src="memes/dot-syntax.jpg">
-      <img src="memes/give-me-errors-to-fix.jpg">
-      <img src="memes/kindle-haskell.jpg">
-      <img src="memes/quick-check.jpg">
-      <img src="memes/too-late-clojure.jpg">
-      <img src="memes/write-garbage.jpg">
-      <img src="memes/avoid-state.jpg">
-      <img src="memes/excel-is-fp.jpg">
-      <img src="memes/halting-captcha.jpg">
-      <img src="memes/morphin-time.jpg">
-      <img src="memes/run-away-category-theory.jpg">
-      <img src="memes/turbo-haskell.jpg">
-      <img src="memes/x-prime-prime.jpg">
-      <img src="memes/7-steps-for-elegant-haskell.jpg">
+        <img src="memes/cant-believe-you-havent-switched.jpg">
+        <img src="memes/flamin-millennials.jpg">
+        <img src="memes/how-do-i-traverse.jpg">
+        <img src="memes/no-analogy-only-types.jpg">
+        <img src="memes/show-me-types.jpg">
+        <img src="memes/victor-go-doesnt-need-generics.jpg">
+        <img src="memes/you-are-all-wrong.jpg">
+        <img src="memes/a-polished-ball-of-dirt.jpg">
+        <img src="memes/css-kills.jpg">
+        <img src="memes/functions-and-data.jpg">
+        <img src="memes/induction.jpg">
+        <img src="memes/ocaml.jpg">
+        <img src="memes/society-if-haskell-had-an-ide.jpg">
+        <img src="memes/well-yes-but-actually-no.jpg">
+        <img src="memes/you-come-to-me-at-runtime.jpg">
+        <img src="memes/applied-fireman.jpg">
+        <img src="memes/dead-end.jpg">
+        <img src="memes/functions-break-up.jpg">
+        <img src="memes/its-a-struggle.jpg">
+        <img src="memes/parser-for-things.jpg">
+        <img src="memes/spongebob-uses-applicative.jpg">
+        <img src="memes/who-needs-types-jigsaw.jpg">
+        <img src="memes/audience-question.jpg">
+        <img src="memes/dot-syntax.jpg">
+        <img src="memes/give-me-errors-to-fix.jpg">
+        <img src="memes/kindle-haskell.jpg">
+        <img src="memes/quick-check.jpg">
+        <img src="memes/too-late-clojure.jpg">
+        <img src="memes/write-garbage.jpg">
+        <img src="memes/avoid-state.jpg">
+        <img src="memes/excel-is-fp.jpg">
+        <img src="memes/halting-captcha.jpg">
+        <img src="memes/morphin-time.jpg">
+        <img src="memes/run-away-category-theory.jpg">
+        <img src="memes/turbo-haskell.jpg">
+        <img src="memes/x-prime-prime.jpg">
+        <img src="memes/always-has-been-traverse.jpg">
+        <img src="memes/most-of-java-code-is-traverse.png">
+        <img src="memes/traverse-feeling-of-power.jpg">
+        <img src="memes/7-steps-for-elegant-haskell.jpg">
     </div>
   </body>
 </html>
